[package]
name = "xed"
version = "0.1.0"
authors = ["Phantomical"]
edition = "2018"

[features]
default = [
    "mpx",
    "cet",
    "encoder",
    "decoder",
    "auto-ctor"
]

auto-ctor = []

mpx = []
cet = []
encoder = []
decoder = []

[dependencies]
xed-sys2 = { path = "../xed-sys" }
parking_lot = "*"
num-traits = "*"
enum-primitive-derive = "*"
static_assertions = "*"
smallvec = "*"
ctor = "*"
libc = "*"
